# CarryOutApproval

./: .env.backup  .gitignore  README.md  create_page.html  manage_vendor_assets.py  mypy.ini  pyproject.toml  setup-django.ps1  start-daphne.ps1  start-django.ps1  system-prompt.md  vendor_assets.json
applications/: forms.py  serializers.py  urls.py  views.py
applications/migrations/: 0001_initial.py
applications/templates/applications/: admin_application_list.html  applicant_kanban_board.html  approver_kanban_board.html  create_application.html
audit/: views.py
audit/migrations/: 0001_initial.py
carry_out_approval/: asgi.py  settings.py  urls.py
django/: manage.py  requirements.txt  test_notifications.py
django/applications/: admin.py  models.py  serializers.py  views.py
django/audit/: admin.py  models.py  serializers.py  urls.py
django/carry_out_approval/: settings.py  wsgi.py
django/notifications/: admin.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py
django/static/js/: notifications.js
django/users/: admin.py  backends.py  ldap_service.py  models.py  utils.py  views.py
django/users/tests/: test_backends.py
doc/: applications.md  ldap,md  ldap.md  ldap_service_account_design.md  login.md  usermodel.md
notifications/: views.py
notifications/migrations/: 0001_initial.py
register_testuser/: .env.template  delete_test_users.py  register_to_ad.py  test.py
templates/: base.html  websocket_test.html
templates/partials/: ws_status.html
users/: admin.py  backends.py  ldap_service.py  middleware.py  models.py  serializers.py  session_manager.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_backends.py
(+21 files in other folders)
